--- a/package.json
+++ b/package.json
@@ -6,19 +6,31 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.10.9",
+    "@mui/material": "^5.10.13",
     "@reduxjs/toolkit": "^1.9.0",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
+    "formik": "^2.2.9",
     "nanoid": "^4.0.0",
+    "normalize.css": "^8.0.1",
+    "notiflix": "^3.2.5",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.6.0",
     "react-redux": "^8.0.5",
+    "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.6",
+    "react-toastify": "^9.1.1",
     "redux-persist": "^6.0.0",
-    "web-vitals": "^2.1.3"
+    "styled-components": "^5.3.6",
+    "styled-system": "^5.1.5",
+    "sweetalert2": "^11.6.8",
+    "web-vitals": "^2.1.3",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
